# snake

./: pyproject.toml
snake/: game.py
