[tool.poetry]
name = "snake"
version = "0.1.0"
description = ""
authors = ["Max Burzer <maxi.burzer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.2"
torch = "^2.3.0"
torchvision = "^0.18.0"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
